guestbook/guestbook-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
spec:
  replicas: 4
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - name: guestbook-ui
        image: gcr.io/heptio-images/ks-guestbook-demo:0.2
        ports:
        - containerPort: 80
      - name: failing-container-44
        image: busybox:latest  
        command: ["/bin/sh", "-c", "echo 'Failing container 1'; stress --vm 1 --vm-bytes 256M --timeout 10s"]
        resources:
          limits:
            memory: "64Mi"
      - name: failing-container-2
        image: busybox:latest  
        command: ["/bin/sh", "-c", "echo 'Failing container 2'; stress --vm 1 --vm-bytes 256M --timeout 10s"]
        resources:
          limits:
            memory: "64Mi"
      - name: failing-container-78
        image: busybox:latest  
        command: ["/bin/sh", "-c", "echo 'Failing container 3'; stress --vm 1 --vm-bytes 256M --timeout 10s"]
        resources:
          limits:
            memory: "64Mi"
