guestbook/guestbook-ui-independent.yaml
apiVersion: v1
kind: Pod
metadata:
  name: guestbook-ui-independent
spec:
  containers:
  - name: guestbook-ui-independent
    image: gcr.io/heptio-images/ks-guestbook-demo:0.2
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
    - containerPort: 80
