guestbook/orphaned-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: orphaned-pod
  namespace: <application-namespace>
spec:
  containers:
    - name: busybox
      image: busybox
      command: ['sh', '-c', 'echo Hello, Kubernetes! && sleep 3600']
