guestbook/test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: successful-container-1
          image: nginx:latest
        - name: successful-container-2
          image: alpine:latest
        - name: failing-container
          image: busybox:latest
