guestbook/test-network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  rules:
    - host: my-app.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: my-app-svc
                port:
                  number: 80
